# src/swagger/swagger.json
@@ -305,7 +305,7 @@
 				"parameters": []
 			}
 		},
-		"/devices/{id}": {
+		"/devices/{deviceId}": {
 			"get": {
 				"operationId": "GetDeviceById",
 				"responses": {
@@ -329,7 +329,123 @@
 				"parameters": [
 					{
 						"in": "path",
-						"name": "id",
+						"name": "deviceId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/devices/{deviceId}/fridaVersion": {
+			"get": {
+				"operationId": "GetFridaVersion",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"location": {
+											"type": "string"
+										},
+										"architecture": {
+											"type": "string"
+										},
+										"version": {
+											"type": "string"
+										},
+										"installed": {
+											"type": "boolean"
+										}
+									},
+									"required": [
+										"installed"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "deviceId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/devices/{deviceId}/startFridaServer": {
+			"get": {
+				"operationId": "StartFridaServer",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"location": {
+											"type": "string"
+										},
+										"pid": {
+											"type": "number",
+											"format": "double"
+										}
+									},
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "deviceId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/devices/{deviceId}/killFridaServer": {
+			"get": {
+				"operationId": "KillFridaServer",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"pid": {
+											"type": "number",
+											"format": "double"
+										}
+									},
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "deviceId",
 						"required": true,
 						"schema": {
 							"type": "string"
